# guitar_tap

./: .gitattributes  .gitignore  .guitar_tap.py.swp  .pylintrc  FRED  MIGRATION_PLAN.md  MODEL_PARITY_ANALYSIS.md  Peak selection.drawio  README.md  Test.py  Test.ui  UNUSED.7z  User Manual.docx  VIEWS_STRUCTURE.md  _version.py  app_settings.py  build_linux  build_mac  build_mac_dmg  build_mac_pkg  build_win  build_win.bat  configure.py  create_wily_report.sh  entitlements.plist  event_types.py  fft_annotations.py  fft_canvas.py  fft_toolbar.py  freq_anal.py  gen_version_build.sh  gt_images.py  guitar-tap-386.spec  guitar-tap.arm.dist  guitar-tap.intel.dist  guitar-tap.iss  guitar-tap.plist  guitar-tap.spec  guitar_modes.py  guitar_tap.py  (+55 more)
.github/: FUNDING.yml
Experiment/: graph.py  hi.py  listDevices.py  secondary_axis.py  update.py
docs/: ANNOTATION_ID_PIPELINE_REFACTORING.md  DEVICE_MANAGEMENT_REFACTORING.md  Fast and Efficient Pitch Detection – Cycfi Research.webloc  GuitarTap-Quick-Start-Guide.html  MODEL_PARITY_ANALYSIS.md  Models file level comparison.xlsx  PARITY_METHOD_CALL_SITES.md  PYTHON_ARCHITECTURE_RESTRUCTURING_PLAN.md  ReleaseNotes-1.0-263.md  ReleaseNotes-1.0-366.md  ReleaseNotes-1.0-367.md  ReleaseNotes-1.0-368.md  ReleaseNotes-1.0-373.md  ReleaseNotes-1.0-374.md  ReleaseNotes-1.0-375.md  ReleaseNotes-1.0-376.md  ReleaseNotes-1.0.1-378.md  ReleaseNotes-1.0.2-434.md  ReleaseNotes-1.0.2-440.md  SPECTRUM_CAPTURE_PEAK_ANALYSIS_PARITY.md  SWIFTUI_COMPAT_VIEW_LAYER_PLAN.md  TEST_COUNT_PARITY_PLAN.md  TEST_PARITY_ANALYSIS.md  VIEWS_STRUCTURE.docx  (+3 more)
(+233 files in other folders)
