[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tap"
version = "0.11"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.10.1",
    "numpy>=2.4",
    "scipy>=1.17",
    "sounddevice>=0.5",
    "pyqtgraph>=0.14",
    "QtAwesome>=1.4",
    "reportlab>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "mypy>=1.19",
    "ruff>=0.15",
    "setuptools>=82",
    "weasyprint",
]
macos = [
    "pyobjc>=12.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/guitar_tap"]

[tool.coverage.run]
source = ["src/guitar_tap/models"]
omit = ["tests/*", ".venv/*"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["tests/", ".venv/", "build/", "dist/"]
